typo bug on debug msg.

--- a/roles/etcd/handlers/main.yml
+++ b/roles/etcd/handlers/main.yml
@@ -36,7 +36,7 @@
 
 - debug:
     msg:
-      - "{{"https://{% if is_etcd_master %}{{ etcd_address }}{% else %}127.0.0.1{% endif %}:2379/health"}}"
+      - "https://{% if is_etcd_master %}{{ etcd_address }}{% else %}127.0.0.1{% endif %}:2379/health"
       - "{{ etcd_cert_dir }}/member-{{ inventory_hostname }}.pem"
       - "{{ etcd_cert_dir }}/member-{{ inventory_hostname }}-key.pem"
 
