Added /etc/kubernetes/pki symbolic link

--- a/roles/kubernetes/secrets/tasks/main.yml
+++ b/roles/kubernetes/secrets/tasks/main.yml
@@ -114,3 +114,9 @@
 - import_tasks: gen_tokens.yml
   tags:
     - k8s-secrets
+
+- name: Create symbolic link /etc/kubenertes/pki -> /etc/kubenertes/ssl
+  file:
+    src: /etc/kubernetes/ssl
+    dest: /etc/kubernetes/pki
+    state: link
