Added handler tasks to remove 10-kubeadm.conf

--- a/roles/kubernetes/node/handlers/main.yml
+++ b/roles/kubernetes/node/handlers/main.yml
@@ -2,8 +2,14 @@
 - name: restart kubelet
   command: /bin/true
   notify:
+    - Kubelet | remove 10-kubeadm.conf
     - Kubelet | reload systemd
     - Kubelet | reload kubelet
+
+- name: Kubelet | remove 10-kubeadm.conf
+  file:
+    path: /etc/systemd/system/kubelet.service.d/10-kubeadm.conf
+    state: absent
 
 - name: Kubelet | reload systemd
   command: systemctl daemon-reload
